--- a/layout.twig
+++ b/layout.twig
@@ -47,6 +47,11 @@
             $( ".bk-extendednavigation" ).toggleClass( "open" );
         });
 
+        // Toggles class open to display/hide navigation folder
+         $(document).on("click", ".navigation-item.folder", function() {
+             $(this).toggleClass( "folder-open" );
+         });
+
         // Toggles class open to add noscroll to body
         $( ".navigation-toggle" ).click(function() {
             $( "body" ).toggleClass( "noscroll" );
