--- a/layout.twig
+++ b/layout.twig
@@ -43,7 +43,7 @@
     <script nonce="{{ numberUsedOnce }}">
 
         // Toggles class open to display/hide the whole navigation
-        $( ".navigation-toggle" ).click(function() {
+        $(document).on("click", ".navigation-toggle", function() {
             $( ".bk-extendednavigation" ).toggleClass( "open" );
         });
 
