add margin bottom to the product page

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -446,6 +446,7 @@
         @media @bp-tablet {
             display: block;
             height: auto;
+            margin-bottom: 40px;
         }
     }
 
