Override ML z-index to higher value due to excessive hero value in template

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -55,6 +55,10 @@ body {
     }
 }
 
+.language-selector--dropdown .language-selector__list:hover li:not(.language-selector__item--current) {
+    z-index: 999999;
+}
+
 
 a {
     color: @color__link--text;
