--- a/less/widgets/widget-navigation.less
+++ b/less/widgets/widget-navigation.less
@@ -19,7 +19,7 @@
         right: 0;
         top: 0;
         bottom: 0;
-        z-index: 999999999 !important;
+        z-index: 13 !important;
         display: block;
         width: 40%;
         margin: 100px 0 0;
@@ -61,7 +61,7 @@
     width: 60px;
     height: 100%;
     position: fixed;
-    z-index: 9999999;
+    z-index: 12;
 
     background-color: @color__navigation--background;
     &:hover {
