--- a/layout.twig
+++ b/layout.twig
@@ -15,7 +15,7 @@
 
     {% include basekit.headScript %}
 </head>
-    <body class="{{ page.backgroundClass }} {% block class %}{% endblock %}">
+    <body {{ isV10sSite ? 'id="migrated-site"' : '' }} class="{{ page.backgroundClass }} {% block class %}{% endblock %}">
 
     {% block content %}
     {% endblock %}
