Altered high z-index values

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -408,7 +408,7 @@
         position: absolute;
         left: 0;
         width: 100%;
-        z-index: 9999;
+        z-index: 999;
         @media @bp-tablet {
             position: relative;
         }
@@ -886,6 +886,7 @@
 
     .cell--image {
         width: 126px;
+        margin-right: 10px;
         padding-left: 10px;
     }
 
